# expidemics

./: .gitignore  Cargo.toml
config/: config_attractiveness_exponential.json  config_attractiveness_gaussian.json  config_attractiveness_inversesquare.json  config_attractiveness_inversesquareroot.json  config_attractiveness_linear.json  config_attractiveness_powerlaw.json  config_attractiveness_randomuniform.json  config_attractiveness_uniform.json  config_epidemic.json  config_epidemic_retriever.json  config_experiment.json  config_grid_bl_retriever.json  config_grid_rl_retriever.json  config_mobility.json  config_mobility_retriever.json  config_rho_beta.json  config_rho_deltabimodal.json  config_rho_exponential.json  config_rho_gamma.json  config_rho_gaussian.json  config_rho_homogeneous.json  config_rho_negativebinomial.json  config_space_bl_retriever.json  config_space_bs_retriever.json  config_space_curator.json  config_space_rl_retriever.json  config_tessellation_bostonlattice.json  config_tessellation_bostonscatter.json  config_tessellation_regularlattice.json
src/: analysis.py  analysis.rs  boston_space.py  build_space.py  call_epidemics.py  call_grid.py  call_mobility.py  db_space_lab.py  epidemic.rs  event.rs  exps.rs  launch.py  lib.rs  main.rs  mobility.rs  plot_chapter.py  plot_chapter_extra.py  plot_chapter_panels.py  plot_mobility.py  plot_panels.py  plot_space.py  space.rs  utils.py  utils.rs
