[package]
name = "expidemics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
rand = "0.8.5"
rand_distr = "0.4.3"
GSL = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.1.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
clap = { version = "3.2", features = ["derive"] }

[profile.release]
lto = true